--- a/styles.css
+++ b/styles.css
@@ -42,18 +42,21 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     color: #fff;
-    text-align: center;
+    text-align: left;
+	text-stroke: 1px black;
 }
 
 .hero h1 {
     font-size: 3rem;
-	color: black;
+	color: white;
+	float: left;
 }
 
 .hero p {
     font-size: 1.5rem;
     margin: 1rem 0;
-	color: black;
+	color: white;
+	text-align: left;
 }
 
 .hero .button {
