--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,12 @@ header {
 
 nav ul {
     list-style: none;
+    padding: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin: 0 15px;
+    display: inline-block;
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -42,21 +43,23 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     color: #fff;
-    text-align: left;
-	text-stroke: 1px black;
+    text-align: center;
 }
 
 .hero h1 {
+	font-family: "Kaisei Decol", serif;
+	font-weight: 500;
+	font-style: normal;
     font-size: 3rem;
-	color: white;
-	float: left;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 5px 5px 0 #000;
 }
 
 .hero p {
+	font-family: "Kaisei Decol", serif;
+	font-style: normal;
     font-size: 1.5rem;
     margin: 1rem 0;
-	color: white;
-	text-align: left;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .hero .button {
@@ -73,7 +76,7 @@ section {
     text-align: center;
 }
 
-section#about, section#lessons, section#teacher, section#contact {
+section#about, section#lessons, section#teacher, section#faq, section#contact {
     background-color: #fff;
     margin: 2rem auto;
     width: 80%;
@@ -86,7 +89,7 @@ h2 {
     color: #333;
 }
 
-.lesson {
+.lesson, .faq-item {
     margin: 1rem 0;
 }
 
@@ -123,6 +126,34 @@ form button {
     color: #fff;
     border: none;
     border-radius: 5px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    nav ul li {
+        display: block;
+        margin: 10px 0;
+    }
+    
+    .hero h1 {
+        font-size: 2.5rem;
+    }
+    
+    .hero p {
+        font-size: 1.2rem;
+    }
+
+    section {
+        width: 95%;
+    }
+
+    .teacher-info {
+        flex-direction: column;
+    }
+
+    .teacher-info img {
+        margin: 0 0 1rem 0;
+    }
 }
 
 footer {
